fixed xv6 and risc height issue visibling background blue tint

--- a/src/Body/body_HDGT1000.scss
+++ b/src/Body/body_HDGT1000.scss
@@ -162,7 +162,7 @@ height:10vw;
 .Body2{
     width:100vw;
     height:30rem;
-     background-color:rgb(27, 87, 199);
+     
      
      box-sizing: border-box;
      position:absolute;
@@ -175,7 +175,8 @@ height:10vw;
 
 body{
     // background-color:rgb(27, 87, 199);
-    height:100vh;
+    // background-color: red;
+    // height:100vh;
 }
 
 
